# fps-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  compile_commands.json  main.cpp
include/: Component.h  Game.h  GameObject.h  GameState.h  Registry.h  globals.h  resource_dir.h
include/Entities/: Enemy.h  EntityDefinitions.h  Pistol.h  Player.h
include/Game/: Weapon.h
include/Utility/: Collision.h  EnemyManager.h  Timer.h  WorldObjectManager.h
include/World/: BaseObjects.h  BridgesRoom.h  Cube.h  LargeColumn.h  MapGenerator.h  Plane.h  Room.h  Room001.h  Room002.h  Stairs.h  Test002.h  TestMap.h  Wall.h  WorldDefinitions.h
include/ecs/: Component.h  Entity.h  ModelRenderSystem.h  ViewCameraSystem.h
include/entities/: EnvironmentFactory.h  PlayerFactory.h
include/old/Entities/: Enemy.h  EntityDefinitions.h  Player.h
include/old/Utility/: CameraHUD.h  Collision.h  PlayerInfoHUD.h  Timer.h
include/old/World/: LargeColumn.h  Stairs.h  Test002.h.bak  WorldDefinitions.h
include/shared/: SharedResources.h
include/systems/: CollisionDetectionSystem.h  CollisionSystem.h  GroundingSystem.h  InputSystem.h  ModelRenderSystem.h  PhysicsSystem.h  UpdateColliderSystem.h  ViewCameraSystem.h  XCollisionSystem.h  YCollisionSystem.h  ZCollisionSystem.h
include/systems/debug/: DebugColliderRenderSystem.h
lib/: libraylib.so.450
resources/: simple_plane.mtl
resources/map/: edolo.mtl  test_map_colored_1.mtl
src/: Game.cpp  main.cpp
src/Entities/: Enemy.cpp  Pistol.cpp  Player.cpp
src/Game/: Entity2D.cpp  Entity2D.h  Weapon.cpp  Weapon.h
src/Utility/: CameraHUD.cpp  EnemyManager.cpp  PlayerInfoHUD.cpp  Timer.cpp  WorldObjectManager.cpp
src/World/: BaseObjects.cpp  BridgesRoom.cpp  Cube.cpp  Floor.cpp  LargeColumn.cpp  MapGenerator.cpp  Plane.cpp  Room001.cpp  Room002.cpp  Stairs.cpp  Test002.cpp  TestMap.cpp  Wall.cpp
src/ecs/: Registry.h  System.h  ViewCameraSystem.h
src/ecs/entities/: EnvironmentFactory.cpp  PlayerFactory.cpp
src/ecs/systems/: CollisionDetectionSystem.cpp  CollisionSystem.cpp  GroundingSystem.cpp  InputSystem.cpp  ModelRenderSystem.cpp  PhysicsSystem.cpp  UpdateColliderSystem.cpp  ViewCameraSystem.cpp  XCollisionSystem.cpp  YCollisionSystem.cpp  ZCollisionSystem.cpp
src/ecs/systems/debug/: DebugColliderRenderSystem.cpp
src/old/Entities/: Enemy.cpp
src/old/Utility/: EnemyManager.cpp  Timer.cpp  WorldObjectManager.cpp
src/old/World/: LargeColumn.cpp  Room001.cpp  Room002.cpp
